Give body background color white otherwise dark mode device issue

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,6 @@ h1,h2,h3,h4,h5,h6,div {
 p,div {
   font-family: 'Inter', sans-serif;
 }
+body{
+  background-color: white;
+}
